--- a/NEKOGURUMA/NEKOGURUMA.csproj
+++ b/NEKOGURUMA/NEKOGURUMA.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="OleWebview.xaml" />
+    <None Remove="SideBar.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,6 +42,11 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="SideBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="OleWebview.xaml">
